# nutorch

./: README.md  TODO.md  chat-termplot.md  chat.archive.3.md  chat.archive.4.md  chat.md  chat2.md  dprint.json  git.md  nutorch.nu
cargo/: CLAUDE.md  Cargo.toml  README.md  chat.archive.1.md  chat.md
cargo/src/: command_add.rs  command_arange.rs  command_argmax.rs  command_backward.rs  command_cat.rs  command_div.rs  command_exp.rs  command_free.rs  command_full.rs  command_gather.rs  command_grad.rs  command_linspace.rs  command_log_softmax.rs  command_manual_seed.rs  command_max.rs  command_maximum.rs  command_mean.rs  command_mm.rs  command_mul.rs  command_randn.rs  command_repeat.rs  command_repeat_interleave.rs  command_reshape.rs  command_sgd_step.rs  command_sin.rs  command_softmax.rs  command_squeeze.rs  command_stack.rs  command_sub.rs  command_tensor.rs  command_value.rs  command_zero_grad.rs  lib.rs  main.rs
cargo/test/: add.nu  arange.nu  backward.nu  cat.nu  detach.nu  div.nu  grad.nu  maximum.nu  mm.nu  package.json  pnpm-lock.yaml  repeat.nu  sgd_step.nu  squeeze.nu  t.nu  test-maximum.nu  test_add.nu  test_arange.nu  test_argmax.nu  test_backward.nu  test_cat.nu  test_detach.nu  test_gather.nu  test_grad.nu  test_log_softmax.nu  test_maximum.nu  test_mm.nu  test_mul.nu  test_neg.nu  test_repeat.nu  test_repeat_interleave.nu  test_reshape.nu  test_sgd_step.nu  test_softmax.nu  test_squeeze.nu  test_stack.nu  test_sub.nu  test_t.nu  test_tensor.nu  test_unsqueeze.nu  (+3 more)
rs/: Cargo.toml  README.md  chat.archive.2.md  chat.md  codey.md
rs/nutorch/: chat.md  (+1 more)
(+76 files in other folders)
